--- a/index.html
+++ b/index.html
@@ -21,23 +21,7 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="nav-container">
-        <a href="#" class="nav-logo">
-          <img src="assets/img/icon.png" alt="KvoLib" width="24" height="24" />
-          <span>KvoLib</span>
-        </a>
-
-        <div class="nav-links">
-          <a href="#hero" class="nav-link">Home</a>
-          <a href="#components" class="nav-link">Components</a>
-          <a href="#docs" class="nav-link">Docs</a>
-          <a href="#" class="nav-link">
-            <i class="fab fa-github"></i>
-          </a>
-        </div>
-      </div>
-    </nav>
+    <div data-include="assets/layout/navbar.html"></div>
 
     <section class="hero" id="hero">
       <div class="hero-content">
@@ -186,55 +170,7 @@
       </div>
     </section>
 
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-grid">
-          <div class="footer-brand">
-            <a href="#" class="footer-logo">
-              <img
-                src="assets/img/icon.png"
-                alt="KvoLib"
-                width="20"
-                height="20"
-              />
-              <span>KvoLib</span>
-            </a>
-            <p>Build beautiful interfaces faster.</p>
-          </div>
-
-          <div class="footer-links">
-            <h4>Product</h4>
-            <ul>
-              <li><a href="#">Components</a></li>
-              <li><a href="#">Documentation</a></li>
-              <li><a href="#">Changelog</a></li>
-            </ul>
-          </div>
-
-          <div class="footer-links">
-            <h4>Resources</h4>
-            <ul>
-              <li><a href="#">Getting Started</a></li>
-              <li><a href="#">Examples</a></li>
-              <li><a href="#">Blog</a></li>
-            </ul>
-          </div>
-
-          <div class="footer-links">
-            <h4>Company</h4>
-            <ul>
-              <li><a href="#">About</a></li>
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">Twitter</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="footer-bottom">
-          <p>© 2026 KvoLib. All rights reserved.</p>
-        </div>
-      </div>
-    </footer>
+    <div data-include="assets/layout/footer.html"></div>
 
     <script src="assets/js/main.js"></script>
   </body>
