feat: Add checkbox component, revamp several button styles, and remove typewriter effect and test page.

--- a/docs.html
+++ b/docs.html
@@ -168,7 +168,7 @@
             <section id="buttons" class="docs-section">
               <h2>Buttons</h2>
               <p>
-                Available button styles with animations.
+                20+ unique button styles with animations.
                 <a href="components/buttons.html" style="color: #00d4ff"
                   >View all →</a
                 >
@@ -176,10 +176,34 @@
 
               <div class="preview-box">
                 <div class="preview-area">
-                  <button class="btn-glow">Glow</button>
-                  <button class="btn-gradient">Gradient</button>
-                  <button class="btn-pulse">Pulse</button>
-                  <button class="btn-shake">Shake</button>
+                  <button class="Btn">
+                    Pay
+                    <svg class="svgIcon" viewBox="0 0 576 512" height="1em">
+                      <path
+                        d="M512 80c8.8 0 16 7.2 16 16v32H48V96c0-8.8 7.2-16 16-16H512zm16 144V416c0 8.8-7.2 16-16 16H64c-8.8 0-16-7.2-16-16V224H528zM64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H512c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm56 304c-13.3 0-24 10.7-24 24s10.7 24 24 24h48c13.3 0 24-10.7 24-24s-10.7-24-24-24H120zm128 0c-13.3 0-24 10.7-24 24s10.7 24 24 24H360c13.3 0 24-10.7 24-24s-10.7-24-24-24H248z"
+                      ></path>
+                    </svg>
+                  </button>
+                  <button class="send-btn">
+                    <div class="svg-wrapper-1">
+                      <div class="svg-wrapper">
+                        <svg height="24" width="24" viewBox="0 0 24 24">
+                          <path d="M0 0h24v24H0z" fill="none"></path>
+                          <path
+                            d="M1.946 9.315c-.522-.174-.527-.455.01-.634l19.087-6.362c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8-8 6-8.054-2.685z"
+                            fill="currentColor"
+                          ></path>
+                        </svg>
+                      </div>
+                    </div>
+                    <span>Send</span>
+                  </button>
+                  <button class="cube cube-hover" type="button">
+                    <div class="bg-top"><div class="bg-inner"></div></div>
+                    <div class="bg-right"><div class="bg-inner"></div></div>
+                    <div class="bg"><div class="bg-inner"></div></div>
+                    <div class="text">3D Cube</div>
+                  </button>
                 </div>
               </div>
 
@@ -187,42 +211,90 @@
                 <table>
                   <thead>
                     <tr>
-                      <th>Class</th>
-                      <th>Effect</th>
+                      <th>Button Name</th>
+                      <th>Description</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td><code>.btn-glow</code></td>
-                      <td>Shadow glow on hover</td>
+                      <td><code>Pay Button</code></td>
+                      <td>Button with unique mix-blend-mode effect</td>
                     </tr>
                     <tr>
-                      <td><code>.btn-gradient</code></td>
-                      <td>Animated gradient shift</td>
+                      <td><code>Send Button</code></td>
+                      <td>Button with flying send icon animation</td>
                     </tr>
                     <tr>
-                      <td><code>.btn-neon</code></td>
-                      <td>Neon border glow</td>
+                      <td><code>Expanding Line</code></td>
+                      <td>Button with line that appears on hover</td>
                     </tr>
                     <tr>
-                      <td><code>.btn-slide</code></td>
-                      <td>Slide fill effect</td>
+                      <td><code>Skew Fill</code></td>
+                      <td>Button with attractive skew effect</td>
                     </tr>
                     <tr>
-                      <td><code>.btn-pulse</code></td>
-                      <td>Pulsing animation</td>
+                      <td><code>Corner Fold</code></td>
+                      <td>Button with fold corner effect</td>
                     </tr>
                     <tr>
-                      <td><code>.btn-magnetic</code></td>
-                      <td>Follows cursor (requires JS)</td>
+                      <td><code>3D Cube</code></td>
+                      <td>Button with 3D cube hover effect</td>
                     </tr>
                     <tr>
-                      <td><code>.btn-border-anim</code></td>
-                      <td>Rainbow border animation</td>
+                      <td><code>Text Swap</code></td>
+                      <td>Button with smooth text transition</td>
                     </tr>
                     <tr>
-                      <td><code>.btn-shake</code></td>
-                      <td>Shake on hover</td>
+                      <td><code>Sparkling Star</code></td>
+                      <td>Button with spreading star animation</td>
+                    </tr>
+                    <tr>
+                      <td><code>Shopping Cart</code></td>
+                      <td>Button with tooltip and icon transition</td>
+                    </tr>
+                    <tr>
+                      <td><code>Bounce</code></td>
+                      <td>Button with jump animation on hover</td>
+                    </tr>
+                    <tr>
+                      <td><code>Arrow Entry</code></td>
+                      <td>Button with animated arrows and expanding circle</td>
+                    </tr>
+                    <tr>
+                      <td><code>Growing Underline</code></td>
+                      <td>Button with double underline animation</td>
+                    </tr>
+                    <tr>
+                      <td><code>Glitch</code></td>
+                      <td>Button with retro glitch effect</td>
+                    </tr>
+                    <tr>
+                      <td><code>Flipping Letters</code></td>
+                      <td>Button with letter flip animation</td>
+                    </tr>
+                    <tr>
+                      <td><code>3D Layers</code></td>
+                      <td>Button with 3D layered effect</td>
+                    </tr>
+                    <tr>
+                      <td><code>Chitchat Text</code></td>
+                      <td>Button with text chitchat animation</td>
+                    </tr>
+                    <tr>
+                      <td><code>Morphing</code></td>
+                      <td>Button with smooth clip-path animation</td>
+                    </tr>
+                    <tr>
+                      <td><code>Typewriter</code></td>
+                      <td>Button with typewriter effect</td>
+                    </tr>
+                    <tr>
+                      <td><code>Edit</code></td>
+                      <td>Icon button with pen animation</td>
+                    </tr>
+                    <tr>
+                      <td><code>Border Gradient</code></td>
+                      <td>Button with sweep gradient effect</td>
                     </tr>
                   </tbody>
                 </table>
