--- a/index.html
+++ b/index.html
@@ -67,14 +67,8 @@
 
     <section class="hero" id="hero">
       <div class="hero-content">
-        <div class="hero-badge">
-          <span class="badge-dot"></span>
-          Introducing KvoLib v1.0
-        </div>
-
         <h1 class="hero-title">
-          <span class="typewriter-text" id="typewriter"></span>
-          <span class="typewriter-cursor">|</span>
+          <span class="typewriter-text">Beautiful UI Components</span>
         </h1>
 
         <p class="hero-description">
